--- a/strona10.htm
+++ b/strona10.htm
@@ -2,10 +2,15 @@
     <head>
         <meta charset="utf-8">
         <title>Historia szachów</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1><a href="index.html">Powrót do strony głównej</a></h1>
-        <p>(pomysł zrób zdjęcie/logo które po kliknięcu wraca cię do home strony)</p>
-        <h2>siema</h2>
-    
+        <div class="logo">
+        <a href="index.html"><img src="logo1.png"></a>
+        </div>
+        <h1>Magnus Carlsen</h1>
+        <p>Już od najmłodszych lat ewidentny był niezwykły talent Magnusa Carlsena i jego predyspozycje do zostania najlepszym graczem. Odkąd został mistrzem świata w 2013 roku i najwyżej ocenianym graczem w historii w 2014 roku, norweski arcymistrz utrzymuje się na szczycie w szachach klasycznych, błyskawicznych i szybkich. </p>
+        <p>Magnus urodził się w Tønsberg w Norwegii 30 listopada 1990 roku. We wczesnych latach życia przenosił się z rodziną między Finlandią a Belgią, następnie wrócił do Norwegii w 1998 roku, dorastając na przedmieściach Haslum na obrzeżach Oslo. </p>
     </body>
