--- a/strona3.htm
+++ b/strona3.htm
@@ -2,10 +2,18 @@
     <head>
         <meta charset="utf-8">
         <title>Historia szachów</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1><a href="index.html">Powrót do strony głównej</a></h1>
-        <p>(pomysł zrób zdjęcie/logo które po kliknięcu wraca cię do home strony)</p>
-        <h2>siema</h2>
-    
+        <div class="logo">
+        <a href="index.html"><img src="logo1.png"></a>
+        </div>
+        <h1>Ewolucja gry</h1>
+        <p>Do Europy szatrandż przywędrował wraz z arabską ekspansją. W VIII wieku Arabowie dokonali podboju Półwyspu Iberyjskiego. Wraz z ich panowaniem krzewiła się także kultura arabska, w tym gra w szatrandż. Największą popularność gra zdobyła na południu Europy w Hiszpanii i we Włoszech. Mimo, iż w XV w. Hiszpanie wyparli muzułmanów z Półwyspu Iberyjskiego to nie zapomnieli jednak o szatrandżu. Szachy przenikały także do Europy poprzez Persję i Cesarstwo Bizantyjskie. Następnie gra upowszechniała się w całej Europie. Za sprawą wikingów dotarła nawet na Islandię.
+
+        <p>Około 1475 roku szatrandż uległ istotnym modyfikacjom, które doprowadziły do powstania gry w szachy. Opracowane zostały zasady znane nam współcześnie. Przede wszystkim piony mogły w pierwszym swoim ruchu przeskoczyć dwa pola. Hetman zwany królową zastąpił wezyra i uzyskał możliwość poruszania się we wszystkich kierunkach o dowolną ilość pól. Wprowadzona została taże roszada. To doprowadziło do znacznego zwiększenia dynamiki gry, a to wpłynęło na jej większą popularność. Dotąd bowiem rzadko dochodziło do szach-mata, częściej po prostu zbijano wszystkie pionki przeciwnika. Zmiany w XV wieku całkowicie zrewolucjonizowały szatrandż, który odtąd był po prostu znanymi nam szachami.</p>
+
+        <p>Pod koniec XV wieku zaczęły pojawiać się pierwsze podręczniki współczesnych szachów. Jeden z nich ukazał się w 1497 roku w Salamance pod tytułem Rozprawa o miłości i sztuce szachowej ze stu pięćdziesięcioma przykładami partii. Jej autorem był Luis Ramireza de Lucena. Książka zawiera analizę dziesięciu otwarć szachowych oraz stu pięćdziesięciu pozycji i problemów szachowych. Są tam opisy debiutów (początkowa faza gry w szachy), znanych dziś jako obrona francuska i obrona skandynawska. Pokazuje to, że szachy fascynowały ówczesnych graczy, którzy tworzyli obszerne analizy szachowych wariantów.</p>
     </body>
