--- a/strona5.htm
+++ b/strona5.htm
@@ -2,10 +2,14 @@
     <head>
         <meta charset="utf-8">
         <title>Historia szachów</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1><a href="index.html">Powrót do strony głównej</a></h1>
-        <p>(pomysł zrób zdjęcie/logo które po kliknięcu wraca cię do home strony)</p>
-        <h2>siema</h2>
+        <div class="logo">
+        <a href="index.html"><img src="logo1.png"></a>
+        </div>
+        <h1>Współczesne Zasady</h1>
     
     </body>
