--- a/strona7.htm
+++ b/strona7.htm
@@ -2,10 +2,44 @@
     <head>
         <meta charset="utf-8">
         <title>Historia szachów</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
-    <body>
-        <h1><a href="index.html">Powrót do strony głównej</a></h1>
-        <p>(pomysł zrób zdjęcie/logo które po kliknięcu wraca cię do home strony)</p>
-        <h2>siema</h2>
+    <body> 
+        <div class="container">
+        <div class="logo">
+        <a href="index.html"><img src="logo1.png"></a>
+        </div>
+        <h1>Międzynarodowa Federacja Szachowa - FIDE</h1>
+        <p>Międzynarodowa Federacja Szachowa (fr. Fédération Internationale des Échecs, FIDE) – utworzona 20 lipca 1924 roku w Paryżu organizacja międzynarodowa, zrzeszająca narodowe związki szachowe z całego świata, w tym Polski Związek Szachowy. Mottem FIDE jest Gens una sumus (łac. Jesteśmy jedną rodziną). Od 2018 na czele FIDE stoi Arkadij Dworkowicz, były wicepremier Federacji Rosyjskiej.</p>
+
+        <p>Do głównych zadań FIDE należy: definiowanie i ujednolicanie reguł gry w szachy oraz zasad rozgrywania międzynarodowych zawodów szachowych, obliczanie rankingu szachistów, przyznawanie tytułów (zobacz arcymistrz) szachistom oraz sędziom szachowym. Federacja organizuje najważniejsze zawody szachowe o zasięgu światowym, w tym indywidualne mistrzostwa świata oraz olimpiady szachowe, patronuje lub nadzoruje rozgrywanie niektórych turniejów międzynarodowych z udziałem najsilniejszych szachistów świata. Ogromna większość międzynarodowych zawodów szachowych odbywa się na zasadach określonych przez FIDE. Rozgrywki o zasięgu krajowym są organizowane w oparciu o przepisy narodowych związków szachowych, które z założenia nie mogą być sprzeczne z przepisami FIDE.</p>
+
+        <p>FIDE powstała na wniosek sekretarza Francuskiej Federacji Pierre Vincenta, a wśród 15 państw (Anglia, Argentyna, Belgia, Czechosłowacja, Finlandia, Francja, Holandia, Włochy, Jugosławia, Kanada, Węgry, Rumunia, Hiszpania, Szwajcaria), które zakładało FIDE była także Polska (reprezentowana przez Izaaka Towbina).</p>
+
+        <p>W 1928 w Hadze FIDE jako pierwsza organizacja sportowa podjęła historyczną decyzję – zrównała prawa amatorów i zawodowców.</p>
+
+        <p>Początkowo FIDE była dość słabą organizacją, ponieważ Związek Radziecki z przyczyn politycznych odmówił przystąpienia do federacji. Sytuacja uległa zmianie w 1946 roku, po śmierci ówczesnego mistrza świata Aleksandra Alechina FIDE przystąpiła do organizacji turnieju w celu wyłonienia następcy. Po trudnych negocjacjach radziecki związek szachowy dołączył do federacji, z wieloma zastrzeżeniami dotyczącymi przyszłego kształtu tej organizacji.</p>
+
+        <p>W 1948 roku odbył się turniej o mistrzostwo świata, w którym zwyciężył Michaił Botwinnik. Od tego czasu aż do 1993 roku mistrz świata był wyłaniany w oficjalnych meczach organizowanych przez FIDE. Ustalono wielostopniowe eliminacje (turnieje strefowe, międzystrefowe i mecze kandydatów), których zwycięzca uzyskuje prawo gry z mistrzem świata.</p>
+
+        <p>Działalność FIDE w zakresie organizacji meczów o tytuł mistrza świata wywoływała wiele kontrowersji. W 1975 Bobby Fischer nie przystąpił do meczu z pretendentem, skutkiem czego Anatolij Karpow został uznany za jego następcę. W 1984 roku prezydent Florencio Campomanes przerwał mecz pomiędzy Karpowem i Garrim Kasparowem bez wyłonienia zwycięzcy. Kontrowersje wzbudzała również działalność następcy Campomanesa, Ilumżynowa, oskarżanego m.in. o niedotrzymywanie obietnic finansowych.</p>
+
+        <p>W 1993 narastający konflikt pomiędzy FIDE a ówczesnym mistrzem świata Kasparowem doprowadził do rozłamu. Kasparow i pretendent Nigel Short, wyłoniony w eliminacjach zorganizowanych przez FIDE, założyli nową organizację PCA, pod auspicjami której rozegrali mecz, wygrany przez Kasparowa. Od tego czasu rozgrywki o tytuł mistrza świata organizowane były dwutorowo, przez FIDE oraz organizacje zakładane przez Kasparowa. Dopiero w roku 2006 doszło do zunifikowanego meczu o tytuł mistrza świata, w wyniku którego Władimir Kramnik został oficjalnym mistrzem świata w szachach.</p>
+
+        <p>Od 1953 FIDE prowadzi Złotą księgę FIDE, która zawiera m.in. nazwiska zawodników, działaczy, sędziów, którzy odegrali ważną rolę w historii szachów.</p>
+
+        <p>FIDE dopuszcza międzynarodowe drużyny niesłyszących (ICSC), niewidomych (IBCA), niepełnosprawnych z dysfunkcją narządu ruchu (IPCA) na prawach państwa, do rozgrywek olimpijskich.</p>
+
+        <p>W 1999 FIDE została oficjalnie uznana przez Międzynarodowy Komitet Olimpijski. Dwa lata później federacja przyjęła przepisy antydopingowe MKOl. Istnieją plany włączenia szachów do Igrzysk Olimpijskich.</p>
+
+        <p>Według stanu na 18 czerwca 2014 roku, FIDE zrzeszała 181 krajowych federacji (54 federacje z Europy, 51 federacje z Azji, 42 federacje z Afryki, 34 federacje z Ameryki).</p>
+
+        <p>Najwyższym organem organizacji jest Kongres, organizowany co roku (z wyjątkiem tzw. Kongresów nadzwyczajnych, które mogą zostać zwołane na wniosek Prezydenta FIDE). W Polsce odbyły się dwa Kongresy, w 1935 w Warszawie oraz w 2011 w Krakowie (82. edycja).</p>
+
+        <p>W dniu powstania FIDE – 20 lipca jest obchodzony Międzynarodowy Dzień Szachów.</p>
+            
+        </div>
     
     </body>
