--- a/strona9.htm
+++ b/strona9.htm
@@ -2,10 +2,22 @@
     <head>
         <meta charset="utf-8">
         <title>Historia szachów</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1><a href="index.html">Powrót do strony głównej</a></h1>
-        <p>(pomysł zrób zdjęcie/logo które po kliknięcu wraca cię do home strony)</p>
-        <h2>siema</h2>
+        <div class="logo">
+        <a href="index.html"><img src="logo1.png"></a>
+        </div>
+        <h1>Bobby Fischer</h1>
+        <p>Bobby Fischer, właśc. Robert James Fischer (ur. 9 marca 1943 w Chicago, zm. 17 stycznia 2008 w Reykjavíku) – amerykański szachista, mistrz świata w latach 1972–1975, od 2005 obywatel Islandii.</p>
+        <p>Fischer wychowywał się w domu bez ojca, ponieważ jego rodzice rozwiedli się, gdy miał dwa lata. Niektóre źródła twierdzą, iż jego biologicznym ojcem był węgierski fizyk Paul Nemenyi[1]. Matka Regina pochodziła z Polski i zarabiała na życie jako scenograf teatralny albo pielęgniarka[2]. Zasady gry w szachy poznał w wieku sześciu lat, czytając instrukcję dołączoną do kompletu szachów. Szachy zafascynowały go, próbował grać ze swoją starszą siostrą, lecz bardzo szybko okazało się, że jest ona zbyt słabym partnerem. Gdy miał trzynaście lat, jego matka poprosiła znanego szachowego trenera Johna Collinsa, by wziął go pod opiekę. Collins trenował wcześniej znanych szachistów, takich jak William Lombardy i Robert Byrne. Fischer spędzał dużo czasu w domu Collinsa, który w pewnym sensie zastąpił mu ojca.
+
+        <p>Pierwszym większym sukcesem Fischera było zwycięstwo w Mistrzostwach USA Juniorów w 1956. O młodym szachiście stało się głośno w Ameryce z powodu kilku błyskotliwych zwycięskich partii ze znanymi szachistami. Dwa lata później Fischer zdobył tytuł mistrza Stanów Zjednoczonych, co było równoznaczne z zakwalifikowaniem się do turnieju międzystrefowego FIDE. Turnieje międzystrefowe były (po turniejach strefowych) kolejną eliminacją mistrzostw świata. Sam udział w tym cyklu rozgrywek dawał szachiście rozgłos i prestiż. Niewielu dawało szansę piętnastoletniemu wówczas Fischerowi na sukces na tym szczeblu światowych rozgrywek, jednak Fischer zajął w turnieju międzystrefowym dzielone szóste miejsce i zakwalifikował się do turnieju pretendentów. To było już wielkie osiągnięcie, za ten sukces otrzymał tytuł arcymistrza. Był pierwszym młodocianym arcymistrzem w historii szachów. W wieku 19 lat Fischer po zajęciu czwartego miejsca w turnieju pretendentów awansował do ścisłej światowej czołówki. Rok później zdobył tytuł mistrza USA niezwykłym wynikiem 11 wygranych partii na 11 rozegranych w turnieju (łącznie – do roku 1967 – w mistrzostwach kraju startował ośmiokrotnie, za każdym razem zwyciężając)[3][4]. Pomiędzy 1960 a 1970 czterokrotnie (za każdym razem na I szachownicy) uczestniczył w szachowych olimpiadach, zdobywając 5 medali: dwa srebrne wraz z drużyną (1960, 1966) oraz indywidualnie dwa srebrne (1966, 1970) oraz brązowy (1960)[5].</p>
+    
+        <p>W turniejach pretendentów Fischer spotykał się z koalicją arcymistrzów radzieckich, którzy nadawali ton międzynarodowym rozgrywkom szachowym na najwyższych szczeblach. Lata sześćdziesiąte to pasmo sukcesów Fischera w międzynarodowych turniejach i nieudane próby pokonania radzieckich arcymistrzów w turniejach pretendentów. Fischer zarzucał im niesportową postawę. W turniejach pretendentów zazwyczaj występowało kilku szachistów z ZSRR, którzy przede wszystkim koncentrowali się na wyeliminowaniu konkurencji z innych krajów, remisując ze sobą bez walki. Analiza wyników i relacje świadków tamtych wydarzeń potwierdzają stosowanie „zespołowej” taktyki w turniejach pretendentów m.in. przez Jefima Gellera, Paula Keresa i Tigrana Petrosjana. Na tym tle powstało wiele nieporozumień i konfliktów pomiędzy Fischerem a FIDE. Fischer postulował daleko idące zmiany w cyklu rozgrywek o szachową koronę. Jego postulaty spotykały się z ograniczonym zrozumieniem. Jako człowiekowi bezkompromisowemu trudno mu było się z tym pogodzić, i już wtedy przyjaciele obawiali się, że z tego powodu porzuci szachy. Jednak pod jego naciskami FIDE zastąpiła turnieje pretendentów bezpośrednimi meczami systemem pucharowym.</p>
+
+        <p>W 1970 Fischer rozpoczął marsz po tytuł mistrza świata wygrywając w wielkim stylu turniej międzystrefowy. W kolejnych meczach pretendentów rozgromił kolejno arcymistrzów Marka Tajmanowa i Benta Larsena w stosunku 6 – 0. W ostatnim meczu były mistrz świata Tigran Petrosjan przerwał jego serię partii bez porażki, jednak Fischer wygrał i ten mecz w stosunku 6½ – 2½. Po raz pierwszy uzyskał tym samym prawo do gry w meczu o mistrzostwo świata. Jego przeciwnikiem był aktualny mistrz Boris Spasski[6].</p>
     
     </body>
