--- a/strona8.htm
+++ b/strona8.htm
@@ -2,10 +2,18 @@
     <head>
         <meta charset="utf-8">
         <title>Historia szachów</title>
+        <link rel="stylesheet" href="style.css">
+        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
-        <h1><a href="index.html">Powrót do strony głównej</a></h1>
-        <p>(pomysł zrób zdjęcie/logo które po kliknięcu wraca cię do home strony)</p>
-        <h2>siema</h2>
+        <div class="logo">
+        <a href="index.html"><img src="logo1.png"></a>
+        </div>
+        <h1>Mistrzostwa Świata</h1>
+        <h2>pierszy tytul mistrza</h2>
+        <h3>skandaliczne zasady walki o tytul</h3>
+        <h3>zmiana zasad i poczatek organizacji fide</h3>
+        <h4>lista mistrzow i ranking fide</h4>
     
     </body>
