--- a/strona3.htm
+++ b/strona3.htm
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="container">
         <div class="logo">
         <a href="index.html"><img src="logo1.png"></a>
         </div>
@@ -16,4 +17,5 @@
         <p>Około 1475 roku szatrandż uległ istotnym modyfikacjom, które doprowadziły do powstania gry w szachy. Opracowane zostały zasady znane nam współcześnie. Przede wszystkim piony mogły w pierwszym swoim ruchu przeskoczyć dwa pola. Hetman zwany królową zastąpił wezyra i uzyskał możliwość poruszania się we wszystkich kierunkach o dowolną ilość pól. Wprowadzona została taże roszada. To doprowadziło do znacznego zwiększenia dynamiki gry, a to wpłynęło na jej większą popularność. Dotąd bowiem rzadko dochodziło do szach-mata, częściej po prostu zbijano wszystkie pionki przeciwnika. Zmiany w XV wieku całkowicie zrewolucjonizowały szatrandż, który odtąd był po prostu znanymi nam szachami.</p>
 
         <p>Pod koniec XV wieku zaczęły pojawiać się pierwsze podręczniki współczesnych szachów. Jeden z nich ukazał się w 1497 roku w Salamance pod tytułem Rozprawa o miłości i sztuce szachowej ze stu pięćdziesięcioma przykładami partii. Jej autorem był Luis Ramireza de Lucena. Książka zawiera analizę dziesięciu otwarć szachowych oraz stu pięćdziesięciu pozycji i problemów szachowych. Są tam opisy debiutów (początkowa faza gry w szachy), znanych dziś jako obrona francuska i obrona skandynawska. Pokazuje to, że szachy fascynowały ówczesnych graczy, którzy tworzyli obszerne analizy szachowych wariantów.</p>
+        </div>
     </body>
