--- a/strona6.htm
+++ b/strona6.htm
@@ -7,8 +7,10 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="container">
         <div class="logo">
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Silniki Szachowe</h1>
+        </div>
     </body>
