--- a/strona8.htm
+++ b/strona8.htm
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="container">
         <div class="logo">
         <a href="index.html"><img src="logo1.png"></a>
         </div>
@@ -14,6 +15,68 @@
         <h2>pierszy tytul mistrza</h2>
         <h3>skandaliczne zasady walki o tytul</h3>
         <h3>zmiana zasad i poczatek organizacji fide</h3>
-        <h4>lista mistrzow i ranking fide</h4>
-    
+        <h4>top 10 zawodników w rankingu FIDE</h4>
+        <table>
+            <thead>
+                <tr>
+                    <th>Imię</th>
+                    <th>Nazwisko</th>
+                    <th>Punkty</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Magnus</td>
+                    <td>Carlsen</td>
+                    <td>2847</td>
+                </tr>
+                <tr>
+                    <td>Fabiano</td>
+                    <td>Caruana</td>
+                    <td>2820</td>
+                </tr>
+                <tr>
+                    <td>Ding</td>
+                    <td>Ian</td>
+                    <td>2791</td>
+                </tr>
+                <tr>
+                    <td>Ian</td>
+                    <td>Nepomniachtchi</td>
+                    <td>2789</td>
+                </tr>
+                <tr>
+                    <td>Levon</td>
+                    <td>Aronian</td>
+                    <td>2781</td>
+                </tr>
+                <tr>
+                    <td>Alexander</td>
+                    <td>Grischuk</td>
+                    <td>2777</td>
+                </tr>
+                <tr>
+                    <td>Anish</td>
+                    <td>Giri</td>
+                    <td>2776</td>
+                </tr>
+                <tr>
+                    <td>Shakhriyar</td>
+                    <td>Mamedyarov</td>
+                    <td>2770</td>
+                </tr>
+                <tr>
+                    <td>Wesley</td>
+                    <td>So</td>
+                    <td>2770</td>
+                </tr>
+                 <tr>
+                    <td>Teimour</td>
+                    <td>Radjabov</td>
+                    <td>2765</td>
+                </tr>
+                
+            </tbody>
+        </table>
+        </div>
     </body>
