--- a/strona9.htm
+++ b/strona9.htm
@@ -7,6 +7,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="container">
         <div class="logo">
         <a href="index.html"><img src="logo1.png"></a>
         </div>
@@ -19,5 +20,5 @@
         <p>W turniejach pretendentów Fischer spotykał się z koalicją arcymistrzów radzieckich, którzy nadawali ton międzynarodowym rozgrywkom szachowym na najwyższych szczeblach. Lata sześćdziesiąte to pasmo sukcesów Fischera w międzynarodowych turniejach i nieudane próby pokonania radzieckich arcymistrzów w turniejach pretendentów. Fischer zarzucał im niesportową postawę. W turniejach pretendentów zazwyczaj występowało kilku szachistów z ZSRR, którzy przede wszystkim koncentrowali się na wyeliminowaniu konkurencji z innych krajów, remisując ze sobą bez walki. Analiza wyników i relacje świadków tamtych wydarzeń potwierdzają stosowanie „zespołowej” taktyki w turniejach pretendentów m.in. przez Jefima Gellera, Paula Keresa i Tigrana Petrosjana. Na tym tle powstało wiele nieporozumień i konfliktów pomiędzy Fischerem a FIDE. Fischer postulował daleko idące zmiany w cyklu rozgrywek o szachową koronę. Jego postulaty spotykały się z ograniczonym zrozumieniem. Jako człowiekowi bezkompromisowemu trudno mu było się z tym pogodzić, i już wtedy przyjaciele obawiali się, że z tego powodu porzuci szachy. Jednak pod jego naciskami FIDE zastąpiła turnieje pretendentów bezpośrednimi meczami systemem pucharowym.</p>
 
         <p>W 1970 Fischer rozpoczął marsz po tytuł mistrza świata wygrywając w wielkim stylu turniej międzystrefowy. W kolejnych meczach pretendentów rozgromił kolejno arcymistrzów Marka Tajmanowa i Benta Larsena w stosunku 6 – 0. W ostatnim meczu były mistrz świata Tigran Petrosjan przerwał jego serię partii bez porażki, jednak Fischer wygrał i ten mecz w stosunku 6½ – 2½. Po raz pierwszy uzyskał tym samym prawo do gry w meczu o mistrzostwo świata. Jego przeciwnikiem był aktualny mistrz Boris Spasski[6].</p>
-    
+        </div>
     </body>
