--- a/strona10.htm
+++ b/strona10.htm
@@ -7,10 +7,12 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="container">
         <div class="logo">
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Magnus Carlsen</h1>
         <p>Już od najmłodszych lat ewidentny był niezwykły talent Magnusa Carlsena i jego predyspozycje do zostania najlepszym graczem. Odkąd został mistrzem świata w 2013 roku i najwyżej ocenianym graczem w historii w 2014 roku, norweski arcymistrz utrzymuje się na szczycie w szachach klasycznych, błyskawicznych i szybkich. </p>
         <p>Magnus urodził się w Tønsberg w Norwegii 30 listopada 1990 roku. We wczesnych latach życia przenosił się z rodziną między Finlandią a Belgią, następnie wrócił do Norwegii w 1998 roku, dorastając na przedmieściach Haslum na obrzeżach Oslo. </p>
+        </div>
     </body>
