--- a/strona5.htm
+++ b/strona5.htm
@@ -7,9 +7,11 @@
         <link href="https://fonts.googleapis.com/css2?family=Inconsolata&display=swap" rel="stylesheet">
     </head>
     <body>
+        <div class="container">
         <div class="logo">
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Współczesne Zasady</h1>
+        </div>
     
     </body>
