--- a/strona1.htm
+++ b/strona1.htm
@@ -18,5 +18,15 @@
         <p>Gra zyskała sporą popularność, toteż zaczęła się rozpowszechniać za pośrednictwem kupców, zabierających czaturangę na wyprawy handlowe (skutkowało to powstaniem przeróżnych<a href="strona2.htm"> wariantów </a>gry). Następnie szachy zdobyły popularność na bliskim wschodzie, na początku gra była akceptowana przez głowy kościoła islamu, jednak, gdy ludzie zaczęli grać na pieniądze, zakazano gry. Zakaz był jednak stale łamany przez fanów szachów i nie był szczególnie respektowany.</p>
         <p>Wkrótce potem gra rozprzestrzeniła się do europy gdzie osiągneła jeszcze większy sukces niż na terenie krajów arabskich</p>
         </div>
+        <h3>Spis Treści</h3>
+        <a href="strona1.htm">Początek Królewskiej Gry</a> <br>
+        <a href="strona2.htm">Warianty Szachowe</a> <br>
+        <a href="strona3.htm">Fenomen Szachów w Europie</a> <br>
+        <a href="strona5.htm">Współczesne zasady</a> <br>
+        <a href="strona6.htm">Początek rewolucji komputerowej w Szachach</a> <br>
+        <a href="strona7.htm">Organizacja FIDE</a> <br>
+        <a href="strona8.htm">Historia Mistrzostw Świata</a> <br> 
+        <a href="strona9.htm">Bobby Fischer</a> <br>
+        <a href="strona10.htm">Magnus Carlsen</a> <br>
         </div>
     </body>
