--- a/strona10.htm
+++ b/strona10.htm
@@ -12,7 +12,24 @@
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Magnus Carlsen</h1>
+        <div class="content">
         <p>Już od najmłodszych lat ewidentny był niezwykły talent Magnusa Carlsena i jego predyspozycje do zostania najlepszym graczem. Odkąd został mistrzem świata w 2013 roku i najwyżej ocenianym graczem w historii w 2014 roku, norweski arcymistrz utrzymuje się na szczycie w szachach klasycznych, błyskawicznych i szybkich. </p>
-        <p>Magnus urodził się w Tønsberg w Norwegii 30 listopada 1990 roku. We wczesnych latach życia przenosił się z rodziną między Finlandią a Belgią, następnie wrócił do Norwegii w 1998 roku, dorastając na przedmieściach Haslum na obrzeżach Oslo. </p>
+        <p>Magnus urodził się w Tønsberg w Norwegii 30 listopada 1990 roku. We wczesnych latach życia przenosił się z rodziną między Finlandią a Belgią, następnie wrócił do Norwegii w 1998 roku, dorastając na przedmieściach Haslum na obrzeżach Oslo.</p>
+        <p>Po ukończeniu szkoły podstawowej Magnus wziął rok wolnego, aby podróżować po Europie grając w szachy. W tym czasie Magnus otrzymał tytuł Mistrza Międzynarodowego i tytuł Arcymistrza. W wieku 13 lat i 4 miesięcy Magnus został wówczas najmłodszym arcymistrzem. Magnus znalazł się na szczycie listy rankingowej FIDE w styczniu 2010 roku. </p>
+        <p>W 2011 roku rating Magnusa FIDE zbliżył się do historycznego rekordu Kasparowa, który wynosił 2851 (rok 1999). W 2012 roku Magnus po raz trzeci wygrał London Chess Championship. Jego ocena wzrosła z 2848 do 2861 i przekroczyła „niepokonany” rekord Kasparowa. Rok 2012 upłynął na kwalifikacjach do WCC 2013.
+        W 2013 roku Magnus wygrał Turniej Kandydatów i zakwalifikował się do meczu o mistrzostwo świata z Viswhanathan Anand. Mecz odbył się w rodzinnym mieście Ananda, Chennai w listopadzie 2013 roku. Magnus został mistrzem świata pokonując Ananda 6,5 - 3,5. </p>
+        </div>
+        <div class="sources">
+                <h3>Spis Treści</h3>
+        <a href="strona1.htm">Początek Królewskiej Gry</a> <br>
+        <a href="strona2.htm">Warianty Szachowe</a> <br>
+        <a href="strona3.htm">Fenomen Szachów w Europie</a> <br>
+        <a href="strona5.htm">Współczesne zasady</a> <br>
+        <a href="strona6.htm">Początek rewolucji komputerowej w Szachach</a> <br>
+        <a href="strona7.htm">Organizacja FIDE</a> <br>
+        <a href="strona8.htm">Historia Mistrzostw Świata</a> <br> 
+        <a href="strona9.htm">Bobby Fischer</a> <br>
+        <a href="strona10.htm">Magnus Carlsen</a> <br>
+        </div>
         </div>
     </body>
