--- a/strona5.htm
+++ b/strona5.htm
@@ -12,6 +12,121 @@
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Współczesne Zasady</h1>
+        <div class="content">
+        <p>Szachownica składa się z 64 pól, na przemian białych i czarnych. Pola w pionie opisane są za pomocą liter od A do H, natomiast pola w poziomie za pomocą cyfr od 1 do 8. Opis alfanumeryczny pozwala na określenie współrzędnych każdej figury na szachownicy.</p>
+
+        <p>Każdy z zawodników na starcie dysponuje 16 bierkami w tym 8 pionkami, dwoma skoczkami, dwoma gońcami, dwiema wieżami, jednym hetmanem (królową) i jednym królem.</p>
+
+        <p>Początkowe ustawienie figur wygląda następująco:</p>
+
+        <p>Białe:</p>
+        <ol>
+        <li>Pionki: 8 bierek zajmuje wszystkie pola w linii 2</li>
+        <li>Wieże: pola a1 i h1</li>
+        <li>Skoczki: pola b1 i g1</li>
+        <li>Gońce: pola c1 i f1</li>
+        <li>Hetman/Królowa: pole d1</li>
+        <li>Król: pole e1</li>  
+        </ol>
+        <p>Czarne</p>
+        <ol>
+        <li>Pionki: 8 bierek zajmuje wszystkie pola w linii 7</li>
+        <li>Wieże: pola a8 i h8</li>
+        <li>Skoczki: pola b8 i g8</li>
+        <li>Gońce: pola c8 i f8</li>
+        <li>Hetman/Królowa: pole d8</li>
+        <li>Król: pole e8</li>
+        </ol>
+        <p>
+        Rozpoczęcie gry:
+        Przed rozpoczęciem gry zawodnicy losują kolory bierek. Grę zawsze zaczyna zawodnik grający białymi. Pierwszy ruch może być wykonany jednym z pionków lub jednym ze skoczków, ponieważ skoczek jako jedyna figura ma możliwość przeskoczenia innych bierek.</p>
+
+        <p>Zasady poruszania się bierek szachowych:</p>
+
+        <p>Pionek
+        Poruszanie się i bicie pionkiem
+
+        Grafika: Schemat poruszania się (zielone kropki) i bicia (żółte kropki) pionkiem
+
+        Wartość - 1 punkt
+
+        Porusza się o jedno pole do przodu, wyjątkiem jest pierwszy ruch każdym pionkiem, wtedy można go przesunąć o jedno lub dwa pola do przodu. Pionek jako jedyny bije w inny sposób niż się porusza, bicie pionem jest możliwe, wykonując ruch po skosie. Pionki to najliczniejsze bierki na szachownicy, w każdym kolorze jest ich, aż osiem. Są na pierwszej linii frontu i często służą za “mięso armatnie”, choć teoretycznie wartość jednego pionka jest najniższa, to gdy uda mu się przedostać na koniec szachownicy zostaje on “przemieniony” w dowolnie wybraną figurę nawet królową - jest to tak zwana promocja piona.</p>
+
+        <p>Goniec
+        Schemat poruszania się gońcem
+
+        Grafika: Schemat poruszania się i bicia gońcem
+
+        Wartość - 3 punkty 
+
+        Porusza się jedynie po skosie, ale za to ma do dyspozycji całą szerokość szachownicy. Goniec, który w początkowym ustawieniu znajduje się na lewo od króla może poruszać się tylko po czarnych polach, natomiast goniec na prawo od króla tylko po polach białych. Na początku gry gońce ustawione są najbliżej króla i królowej i to nie bez znaczenia, bo to właśnie on często niezauważony może okazać się niezwykle pomocny przy macie we współpracy z inną figurą.</p>
+
+        <p>Skoczek
+        Schemat poruszani się i bicia skoczkiem
+
+        Grafika: Schemat poruszania się i bicia skoczkiem
+
+        Wartość - 3 punkty
+
+        Chyba najciekawsza figura w szachach. Wykonuje ruchy na planszy w kształcie litery L i jako jedyny może przeskakiwać ponad innymi figurami, dzięki czemu daje duże pole do popisu kreatywnemu graczowi. Może szachować i matować nawet, gdy król jest osłonięty przez inne figury.</p>
+
+        <p>Wieża
+        Schemat poruszania się i bicia wieżą
+
+        Grafika: Schemat poruszania się i bicia wieżą
+
+        Wartość - 5 punktów
+
+        Cenna figura, którą jednak trudno wprowadzić do gry, jeśli rozpoczynamy partię od walki o centrum szachownicy. Jeden raz w ciągu partii może przeskoczyć figurę - jest nim król, z którym bierze udział w roszadzie - dzięki czemu król jest bezpieczny przez dłuższą część gry. </p>
+
+        <p>>Hetman, Królówka lub Królowa
+        Schemat poruszania się i bicia królową
+
+        Grafika: Schemat poruszania się i bicia królówką
+
+        Wartość - 9 punktów
+
+        Najsilniejsza figura Twojej szachowej “armii”. Może się poruszać we wszystkie strony i z jej udziałem z pewnością najłatwiej wykonać “szach-mat”. Jej strata może zaboleć, ale wymiana “królowa za królową” może okazać się całkiem opłacalna. Na czarno-białej planszy rządzi i dzieli niczym gospodyni w domu.</p> 
+
+        Król 
+        Schemat poruszania się i bicia królem
+
+        Wartość - bezcenny 
+
+        <p>To jedyna figura, której nie można zbić, za to poruszać może się jedynie o jedno pole w każdym kierunku, jeśli nie znajduje się ono w linii bicia innej figury. Wyjątkiem jest roszada, kiedy król może przejść dwa pola. Królowie nie mogą się wzajemnie szachować, dlatego też najbliższa odległość na jaką król może się zbliżyć do swojego odpowiednika to dwa pola. Gdy obydwaj szachiści mają do dyspozycji wyłącznie swoich królów - wtedy mamy tzw. “pat” i koniec gry. </p>
+
+        <p>Ruchy specjalne</p>
+        <p>Bicie w locie
+        To zagranie, jakie może wykonać pion - gdy jego odpowiednik w pierwszym ruchu wyjdzie o dwa pola i stanie obok piona przeciwnika, wtedy i tylko wtedy (później nie można wykonać takiego zagrania) pion może zostać przesunięty po skosie, nie bijąc bezpośrednio piona, który przed chwilą wykonał ruch.</p> 
+
+        <p>Roszada
+        Roszada może zostać wykonana tylko wtedy, gdy ani król, ani wieża nie wykonywali wcześniej ruchu. Są dwa typy roszad - krótsza z wieżą po prawej stronie i dłuższa - z wieżą z lewej strony. Roszada nie może być też wykonana, gdy pole przez które ma przejść król znajduje się pod atakiem przeciwnika albo, gdy król jest szachowany.</p>
+
+        <p>Zakończenie gry
+        Szach i mat
+        Celem gry jest zamatowanie króla przeciwnika. By doszło do mata najpierw musi nastąpić szach.</p>
+
+        <p>Szach jest wtedy gdy król jest bezpośrednio atakowany przez bierki przeciwnika. Króla nie można zbić dlatego, gdy jest on szachowany musi się on przesunąć na wolne pole, które nie będzie w bezpośredniej linii ataku figur przeciwnika. </p>
+
+        <p>Jeśli natomiast król nie ma możliwości zmiany pola, ponieważ na każdym jest szachowany lub jest ono zajęte przez inne bierki w tym samym kolorze co król wtedy następuje mat i koniec gry.
+
+        Wygrywa gracz, który daje mata.</p>
+
+        <p>Pat 
+        W sytuacji, gdy król ani żadna inna bierka w kolorze króla nie ma możliwości ruchu, a król nie jest szachowany wtedy następuje remis czyli Pat. Pat następuję również wtedy, gdy obydwaj zawodnicy nie mają figur o wystarczającej mocy, by zamatować przeciwnika.</p>
+        </div>
+        <div class="sources">
+                <h3>Spis Treści</h3>
+        <a href="strona1.htm">Początek Królewskiej Gry</a> <br>
+        <a href="strona2.htm">Warianty Szachowe</a> <br>
+        <a href="strona3.htm">Fenomen Szachów w Europie</a> <br>
+        <a href="strona5.htm">Współczesne zasady</a> <br>
+        <a href="strona6.htm">Początek rewolucji komputerowej w Szachach</a> <br>
+        <a href="strona7.htm">Organizacja FIDE</a> <br>
+        <a href="strona8.htm">Historia Mistrzostw Świata</a> <br> 
+        <a href="strona9.htm">Bobby Fischer</a> <br>
+        <a href="strona10.htm">Magnus Carlsen</a> <br>
+        </div>
         </div>
     
     </body>
