--- a/strona7.htm
+++ b/strona7.htm
@@ -12,6 +12,7 @@
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Międzynarodowa Federacja Szachowa - FIDE</h1>
+        <div class="content">
         <p>Międzynarodowa Federacja Szachowa (fr. Fédération Internationale des Échecs, FIDE) – utworzona 20 lipca 1924 roku w Paryżu organizacja międzynarodowa, zrzeszająca narodowe związki szachowe z całego świata, w tym Polski Związek Szachowy. Mottem FIDE jest Gens una sumus (łac. Jesteśmy jedną rodziną). Od 2018 na czele FIDE stoi Arkadij Dworkowicz, były wicepremier Federacji Rosyjskiej.</p>
 
         <p>Do głównych zadań FIDE należy: definiowanie i ujednolicanie reguł gry w szachy oraz zasad rozgrywania międzynarodowych zawodów szachowych, obliczanie rankingu szachistów, przyznawanie tytułów (zobacz arcymistrz) szachistom oraz sędziom szachowym. Federacja organizuje najważniejsze zawody szachowe o zasięgu światowym, w tym indywidualne mistrzostwa świata oraz olimpiady szachowe, patronuje lub nadzoruje rozgrywanie niektórych turniejów międzynarodowych z udziałem najsilniejszych szachistów świata. Ogromna większość międzynarodowych zawodów szachowych odbywa się na zasadach określonych przez FIDE. Rozgrywki o zasięgu krajowym są organizowane w oparciu o przepisy narodowych związków szachowych, które z założenia nie mogą być sprzeczne z przepisami FIDE.</p>
@@ -40,6 +41,19 @@
 
         <p>W dniu powstania FIDE – 20 lipca jest obchodzony Międzynarodowy Dzień Szachów.</p>
             
+        </div>
+        <div class="sources">
+                <h3>Spis Treści</h3>
+        <a href="strona1.htm">Początek Królewskiej Gry</a> <br>
+        <a href="strona2.htm">Warianty Szachowe</a> <br>
+        <a href="strona3.htm">Fenomen Szachów w Europie</a> <br>
+        <a href="strona5.htm">Współczesne zasady</a> <br>
+        <a href="strona6.htm">Początek rewolucji komputerowej w Szachach</a> <br>
+        <a href="strona7.htm">Organizacja FIDE</a> <br>
+        <a href="strona8.htm">Historia Mistrzostw Świata</a> <br> 
+        <a href="strona9.htm">Bobby Fischer</a> <br>
+        <a href="strona10.htm">Magnus Carlsen</a> <br>
+        </div>
         </div>
     
     </body>
