--- a/strona8.htm
+++ b/strona8.htm
@@ -12,10 +12,11 @@
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Mistrzostwa Świata</h1>
-        <h2>pierszy tytul mistrza</h2>
-        <h3>skandaliczne zasady walki o tytul</h3>
-        <h3>zmiana zasad i poczatek organizacji fide</h3>
-        <h4>top 10 zawodników w rankingu FIDE</h4>
+        <h3>Pierszy tytul mistrza</h3>
+        <h3>Skandaliczne zasady walki o tytul</h3>
+        <h3>Zmiana zasad i poczatek organizacji fide</h3>
+        <h3>Top 10 zawodników w rankingu FIDE</h3>
+        <div class="content">
         <table>
             <thead>
                 <tr>
@@ -78,5 +79,18 @@
                 
             </tbody>
         </table>
+        </div>
+        <div class="sources">
+                <h3>Spis Treści</h3>
+        <a href="strona1.htm">Początek Królewskiej Gry</a> <br>
+        <a href="strona2.htm">Warianty Szachowe</a> <br>
+        <a href="strona3.htm">Fenomen Szachów w Europie</a> <br>
+        <a href="strona5.htm">Współczesne zasady</a> <br>
+        <a href="strona6.htm">Początek rewolucji komputerowej w Szachach</a> <br>
+        <a href="strona7.htm">Organizacja FIDE</a> <br>
+        <a href="strona8.htm">Historia Mistrzostw Świata</a> <br> 
+        <a href="strona9.htm">Bobby Fischer</a> <br>
+        <a href="strona10.htm">Magnus Carlsen</a> <br>
+        </div>
         </div>
     </body>
