--- a/strona3.htm
+++ b/strona3.htm
@@ -12,10 +12,25 @@
         <a href="index.html"><img src="logo1.png"></a>
         </div>
         <h1>Ewolucja gry</h1>
+        <div class="content">
         <p>Do Europy szatrandż przywędrował wraz z arabską ekspansją. W VIII wieku Arabowie dokonali podboju Półwyspu Iberyjskiego. Wraz z ich panowaniem krzewiła się także kultura arabska, w tym gra w szatrandż. Największą popularność gra zdobyła na południu Europy w Hiszpanii i we Włoszech. Mimo, iż w XV w. Hiszpanie wyparli muzułmanów z Półwyspu Iberyjskiego to nie zapomnieli jednak o szatrandżu. Szachy przenikały także do Europy poprzez Persję i Cesarstwo Bizantyjskie. Następnie gra upowszechniała się w całej Europie. Za sprawą wikingów dotarła nawet na Islandię.
 
         <p>Około 1475 roku szatrandż uległ istotnym modyfikacjom, które doprowadziły do powstania gry w szachy. Opracowane zostały zasady znane nam współcześnie. Przede wszystkim piony mogły w pierwszym swoim ruchu przeskoczyć dwa pola. Hetman zwany królową zastąpił wezyra i uzyskał możliwość poruszania się we wszystkich kierunkach o dowolną ilość pól. Wprowadzona została taże roszada. To doprowadziło do znacznego zwiększenia dynamiki gry, a to wpłynęło na jej większą popularność. Dotąd bowiem rzadko dochodziło do szach-mata, częściej po prostu zbijano wszystkie pionki przeciwnika. Zmiany w XV wieku całkowicie zrewolucjonizowały szatrandż, który odtąd był po prostu znanymi nam szachami.</p>
 
         <p>Pod koniec XV wieku zaczęły pojawiać się pierwsze podręczniki współczesnych szachów. Jeden z nich ukazał się w 1497 roku w Salamance pod tytułem Rozprawa o miłości i sztuce szachowej ze stu pięćdziesięcioma przykładami partii. Jej autorem był Luis Ramireza de Lucena. Książka zawiera analizę dziesięciu otwarć szachowych oraz stu pięćdziesięciu pozycji i problemów szachowych. Są tam opisy debiutów (początkowa faza gry w szachy), znanych dziś jako obrona francuska i obrona skandynawska. Pokazuje to, że szachy fascynowały ówczesnych graczy, którzy tworzyli obszerne analizy szachowych wariantów.</p>
         </div>
+        <div class="sources">
+                <h3>Spis Treści</h3>
+        <a href="strona1.htm">Początek Królewskiej Gry</a> <br>
+        <a href="strona2.htm">Warianty Szachowe</a> <br>
+        <a href="strona3.htm">Fenomen Szachów w Europie</a> <br>
+        <a href="strona5.htm">Współczesne zasady</a> <br>
+        <a href="strona6.htm">Początek rewolucji komputerowej w Szachach</a> <br>
+        <a href="strona7.htm">Organizacja FIDE</a> <br>
+        <a href="strona8.htm">Historia Mistrzostw Świata</a> <br> 
+        <a href="strona9.htm">Bobby Fischer</a> <br>
+        <a href="strona10.htm">Magnus Carlsen</a> <br>
+        </div>
+        </div>
+
     </body>
